# culture-chat

./: .gitignore  README.md  annotations-qwen3-30b-a3b.txt  config.py  main.py  pyproject.toml  sample-n_100-minturn_6-lang_eng-annotations.jsonl
notebooks/: bigspin_cultural_analysis.ipynb
scripts/: run.sh
src/: annotator.py  bigspin_loader.py  loader.py  models.py  prompts.py
