[project]
name = "culture-chat"
version = "0.1.0"
description = "Annotate WildChat conversations for cultural relevance using the CultureScope taxonomy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "datasets>=2.21.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "openai>=1.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
